--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,19 @@
 ---
 type: page
 title: About
-date: 2021-03-19
+date: 2021-06-13
 ---
 
-# Your Name
+# Jay Yiu
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
-
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
-
-[**Deploy your own**](https://vercel.com/new/git/external?repository-url=https://github.com/vercel-solutions/nextjs-portfolio-starter&project-name=portfolio&repository-name=portfolio) in a few minutes.
+Hey, I'm a Jay Yiu. I enjoy working out, a lot!
 
 ---
 
 <div>
-  Twitter [@yourname](https://twitter.com/yourname)
+  Main Instagram [@jayyiu8](https://instagram.com/jayyiu8)
   <br />
-  GitHub [@yourname](https://github.com/yourname)
+  Harry's Cuisine [@harrys.cuisine](https://instagram.com/harrys.cuisine)
   <br />
-  Instagram [@yourname](https://instagram.com/yourname)
-  <br />
-  Email your@name.com
+  Email jayyiu8@gmail.com
 </div>
