--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -1,31 +1,20 @@
 ---
 type: page
 title: Photos
-date: 2021-03-18
+date: 2021-06-13
 ---
 
 # Photos
 
-Here's some of my photography.
-
 import Image from 'next/image'
 
 <Image
-  src="/images/photo2.jpg"
+  src="https://i.ibb.co/YTXtVPQ/Jayyiu.jpg"
   alt="Photo"
-  width={1125}
-  height={750}
+  width={800}
+  height={800}
   priority
   className="next-image"
 />
-[Unsplash ↗ ](https://unsplash.com/photos/WeYamle9fDM)
+[Download ↗ ](https://i.ibb.co/YTXtVPQ/Jayyiu.jpg)
 
-<Image
-  src="/images/photo.jpg"
-  alt="Photo"
-  width={1125}
-  height={750}
-  priority
-  className="next-image"
-/>
-[Unsplash ↗ ](https://unsplash.com/photos/ndN00KmbJ1c)
