--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -9,7 +9,7 @@ date: 2021-06-13
 import Image from 'next/image'
 
 <Image
-  src={`${https://i.ibb.co/YTXtVPQ/Jayyiu.jpg}`}
+  src="/images/jayyiu.jpg"
   alt="Photo"
   width={800}
   height={800}
