round profile pic

--- a/pages/photos.mdx
+++ b/pages/photos.mdx
@@ -14,7 +14,7 @@ import Image from 'next/image'
   width={800}
   height={800}
   priority
-  className="next-image"
+  className="next-image profile-pic"
 />
 [Download ↗ ](https://i.ibb.co/YTXtVPQ/Jayyiu.jpg)
 
