round profile pic 2

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,6 +6,17 @@ date: 2021-06-13
 
 # Jay Yiu
 
+import Image from 'next/image'
+
+<Image
+  src="/images/jayyiu.jpg"
+  alt="Photo"
+  width={250}
+  height={250}
+  priority
+  className="next-image profile-pic"
+/>
+
 Hey, I'm a Jay Yiu. I enjoy working out, a lot!
 
 ---
